rwds.css
/*-- navbar --*/
.navbar {
  padding-top: 0;
  padding-bottom: 0;
  font-family: 'Oswald';
  font-size: 1em;
}

#quarto-header {
  border-bottom: 1px solid black;
}

.navbar > .container,
.navbar > .container-fluid,
.navbar > .container-sm,
.navbar > .container-md,
.navbar > .container-lg,
.navbar > .container-xl,
.navbar > .container-xxl {
  display: flex;
  flex-wrap: inherit;
  align-items: baseline;
  /* justify-content: center; */
}

.navbar-brand-container {
  display: flex;
  padding-top: 0;
  margin-left: 8em;
  padding-bottom: 0;
}

@media (max-width: 1200px) {
.navbar-brand-container {
  margin-left: 0;
}
}
  
.navbar-brand.navbar-brand-logo {
  display: inline;
  padding-top: 0;
  padding-bottom: 0;
  margin-right: 0;
}

.navbar-logo {
  max-height: 150px;
  width: auto;
  align-items: baseline;
}

@media (max-width: 1200px) {
.navbar-logo {
  max-height: 100px;
  width: auto;
  align-items: baseline;
}
}

.navbar-dark .navbar-nav .nav-link {
  color: black;
  font-weight: 400;
}

.navbar-dark .navbar-nav .nav-link:hover {
  color: #939bc9;
  font-weight: 400;
}

.navbar-dark .navbar-nav .show>.nav-link, .navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link.active {
  color: #939bc9;
}

.nav-item {
  margin-right: 1rem;
}

.dropdown-item {
  font-family: inherit;
  letter-spacing: 1px;
  display: block;
  width: 100%;
  padding: 0.25rem 1rem;
  clear: both;
  font-weight: 300;
  color: black;
  text-align: inherit;
  text-decoration: none;
  text-transform: uppercase;
  white-space: nowrap;
  background-color: rgba(0,0,0,0);
  border: 0;
}

/*-- quarto titles --*/
#title-block-header {
  margin-block-end: 1rem;
  position: relative;
  margin-top: -1px;
  margin-bottom: 1.8em;
  border-bottom: 1px solid black;
  background-color: #f0eeeb;
}

.quarto-title-banner {
  margin-bottom: 0.75em;
}

@media (max-width: 991.98px) {
.quarto-title-banner {
    padding-top: 2.5em;
    padding-bottom: 0;
}
}

@media (min-width: 992px) {
.quarto-title-banner {
    padding-top: 2.5em;
    padding-bottom: 0;
}
}

.quarto-title-banner .quarto-title .title {
  font-weight: 500;
}

#title-block-header.quarto-title-block.default .description {
  margin-top: 1.5em;
  font-weight: 400;
  font-size: 1.2em;
  color: black;
}

.quarto-title .quarto-categories {
  display: flex;
  column-gap: 0.4em;
  padding-bottom: 0.5em;
  margin-top: 1.9em;
}

.quarto-title .quarto-categories .quarto-category {
  padding: 0.25em 0.75em;
  font-family: 'Oswald';
  font-size: .9em;
  font-weight: 400;
  color: #939bc9;
  text-transform: uppercase;
  border: solid 1px;
  border-radius: 0.25rem;
  opacity: 1;
}

.quarto-title-meta {
  margin-bottom: 2.5em;
}

#title-block-header.quarto-title-block.default .quarto-title-meta-heading {
  font-family: 'Oswald';
  text-transform: uppercase;
  margin-top: 1em;
  font-size: 0.9em;
  opacity: 1;
  font-weight: 400;
}

#title-block-header.quarto-title-block.default .quarto-title-meta-contents {
  font-family: 'Oswald';
  text-transform: uppercase;
  font-weight: 300;
  opacity: 0.8;
  font-size: 0.9em;
}


/*-- main content --*/
body.nav-fixed {
  padding-top: auto;
  background-color: #f0eeeb;
}

#quarto-content {
  background-color: #f0eeeb;
}

#quarto-content>* {
  padding-top: 0;
}

h2.anchored {
  margin-bottom: 0;
}

blockquote {
  margin: 0 0 1rem;
  padding: 0.625rem 1.25rem;
  border-left: 0.25rem solid black;
}

.blockquote {
  font-size: inherit;
  padding-left: 1rem;
  padding-right: 1.5rem;
  color: black;
}

.panel-caption, .figure-caption, figcaption {
  color: black;
  font-size: 0.825rem;
  margin-bottom: 1rem;
}

#quarto-appendix.default {
  background-color: #f0eeeb;
  padding-top: 1.5em;
  margin-top: 2em;
  z-index: 998;
  border-top: 1px solid black
}

::marker {
  font-variant-numeric: normal;
}

.article-btn {
  border: none;
  border-radius: 0px;
  background-color: black;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  margin-top: 1.5em;
  margin-bottom: 1.5em;
  cursor: pointer;
}

.article-btn p {
  font-family: 'Oswald';
  font-weight: 500;
  font-size: 1.3em;
  letter-spacing: 1px;
  text-transform: uppercase;
  margin-bottom: 0px;
}

.article-btn a {
  color: white;
}

.further-info {
  margin-top: 1.5em;
  margin-bottom: 1.5em;
  padding-top: 1.5em;
  padding-bottom: .75em;
  border-top: 1px solid black;
  border-bottom: 1px solid black;
}

/*-- sidebar --*/
.sidebar nav[role=doc-toc]>h2, .sidebar nav[role=doc-toc]>.h2 {
  font-family: 'Oswald';
  font-size: .875rem;
  font-weight: 500;
  text-transform: uppercase;
  margin-bottom: 0.5rem;
  margin-top: 0.3rem;
  border-bottom: 0;
  padding-bottom: 0;
  padding-top: 0px;
}

.sidebar nav[role=doc-toc] ul>li>a.active {
  border-left: 1px solid #939bc9;
  font-weight: 500;
  color: #939bc9 !important;
}

.sidebar nav[role=doc-toc]>ul a {
  border-left: none;
  padding-left: 0.6rem;
}

.sidebar nav[role=doc-toc]>ul li a {
  font-family: 'Montserrat';
  font-weight: 500;
  line-height: 1.1rem;
  padding-bottom: 0.2rem;
  padding-top: 0.2rem;
  color: black;
}

.toc-actions a {
  text-decoration: none;
  font-family: 'Montserrat';
  font-weight: 500;
  color: black;
}

.column-margin figcaption, .margin-caption, div.aside, aside, .column-margin p {
  font-family: 'Montserrat';
  font-weight: 400;
  color: black;
  font-size: .825rem;
  text-decoration: none;
}

.column-margin, .figure-caption a {
  text-decoration: none;
  color: #939bc9;
  font-weight: 700;
}

/*-- font styles --*/
h3,
.h3,
h4,
.h4,
h6,
.h6 {
  font-family: 'Oswald';
  text-transform: none;
  letter-spacing: normal;
}

h1, .h1 {
  font-family: 'Oswald';
  font-weight: 500;
  text-transform: uppercase;
  letter-spacing: normal;
}

h2, .h2 {
  font-family: 'Oswald';
  font-weight: 500;
  text-transform: none;
  border-bottom: none;
  letter-spacing: normal;
}
/* ... */

